cluster/apps/networking-system/ingresses/base/radarr/ingress-traefikCRD.yaml
---
# yaml-language-server: $schema=https://schemas.budimanjojo.com/traefik.containo.us/ingressroute_v1alpha1.json
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: radarr
  labels:
    app.kubernetes.io/name: radarr
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`movie.${SECRET_DOMAIN_0}`)
      middlewares:
        - name: secure-headers
        - name: authelia
      services:
        - name: radarr
          port: 7878
          namespace: default
  tls:
    secretName: ${SECRET_DOMAIN_0//./-}-prod-tls
